dataset1235/2025-2/805158916/users/3920620008/executions/2118643220_4204267109.log
== RUN (2025-09-01 14:55:12)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:13)
-- CODE: 
pesog = float (input(" Saco de  ração em gramas:"))
quantidader = float (input(" Quantidade de ração em grama : "))
pesog - quantidader 
print(round( quantidader , 4))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 29.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 73.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 77.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 14.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:29:19)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr-psr
print(round(qdr,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:29.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:73.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:20.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:77.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:14.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:20.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:51:12)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qrs = float(input("Saco apos uma semna: "))
qdr = qrs -  psr
print(round(qrs,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:54)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr (*4 qdr)
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4 qdr)
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:35)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr -p rsr
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:52:15)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qrs = int(input())
qdr = qrs -  psr
print(round(qrs,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:34)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr -p rsr
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:59:24)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
print(round(qdr+10,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:39.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:83.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:30.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:87.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:24.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:30.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:10)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:27:55)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))

print(round(qdr,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:29.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:73.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:20.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:77.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:14.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:20.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:31:15)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
print(round(qdr-psr,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-9054.94
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-1280.78
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-980.2233
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-1256.44
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-2030.57
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:-7980.2233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:05:26)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - prs 
print(round( 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 4
    print(round( 
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:52:19)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qrs = int(input())
qdr = qrs -  psr
print(round(qrs,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = int(input())
              ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:52)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração: Quantidade diária de ração em gramas:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:35:38)
-- CODE: 
pesog = float (input(" Saco de  ração em gramas:"))
quantidader = float (input(" Quantidade de ração em grama : "))
pesog - quantidader * 4
print(round( quantidader , 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 29.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 73.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 77.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 14.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:35:48)
-- CODE: 
pesog = float (input(" Saco de  ração em gramas:"))
quantidader = float (input(" Quantidade de ração em grama : "))
pesog - quantidader * 4
print(round( quantidader , 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 29.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 73.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 77.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 14.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Saco de  ração em gramas: Quantidade de ração em grama : 20.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:16)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:49)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr (*4qdr)
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    qdr - psr (*4qdr)
                ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:55:43)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr =  qdr - 7 
print(round(qdr,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:22.06
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:66.14
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:13.11
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:70.43
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:7.73
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:13.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:54:57)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr - psr 
print(round(V,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(V,2))
                ^
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:33)
-- CODE: 
psr = float(input("Peso do saco de ração: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr -p rsr
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 3
    qdr -p rsr
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:40:35)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qdr = psr - (4*qdr)
print(round(qdr,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:8967.76
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:1061.36
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:919.89
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:1024.15
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:1986.38
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
Peso do saco de ração gramas: Quantidade diária de ração em gramas:7919.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:51:14)
-- CODE: 
psr = float(input("Peso do saco de ração gramas: "))
qdr = float(input("Quantidade diária de ração em gramas:"))
qrs = float(input("Saco apos uma semna: "))
qdr = qrs -  psr
print(round(qrs,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qrs = float(input("Saco apos uma semna: "))
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
